--- a/BinarySearch/node.html
+++ b/BinarySearch/node.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="nodestyle.css"></style>
+    <style><link rel="stylesheet" href="nodestyle.css"></style>
     
 <body>
     <div class="center">
