--- a/BinarySearch/node.html
+++ b/BinarySearch/node.html
@@ -23,5 +23,5 @@
     <br><br><div class="node" style="background-color: #4CAF50;">#</div> <br>This is the answer 
     <br><br><br>LEGEND</div></div>
 </body>
-<script src="binarysearchtree.js"></script>
+<script src="binarysearch.js"></script>
 </html>
